# ggraphics

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  wat.sh
examples/: particles.rs
src/: lib.rs  main.rs  quad.rs
src/data/: build_shaders.sh  mesh.vert.spv  quad.frag.glsl  quad.frag.spv  quad.vert.glsl  quad.vert.spv  quad_wireframe.vert.glsl  shader.glslf  shader.glslv
