[package]
name = "ggraphics"
version = "0.0.0"
authors = ["Simon Heath <icefoxen@gmail.com>"]
edition = "2018"
description = "A 2d graphics library (tentative)"
license = "MIT"


[dependencies]
image = {version = "0.22", default-features=false, features=["jpeg", "png_codec", "pnm", "tiff", "webp", "bmp", "hdr", "dxt"] }
log = "0.4"
euclid = "0.20"

oorandom = "11"
pretty_env_logger = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = {version = "0.3.0-alpha3", default-features=false, features=["glutin"]}
glutin = "0.22.0-alpha3"


#[target.'cfg(target_arch = "wasm32")'.dependencies]
#glow = {version = "0.3.0-alpha3", default-features=false, features=["stdweb"]}
#stdweb  = { version = "0.4.18" }
#webgl_stdweb = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = {version = "0.3.0-alpha3", default-features=false, features=["web-sys"]}
web_sys = { version = "0.3", package = "web-sys", features=["console"] }
wasm-bindgen = { version = "0.2" }

